--- a/app/streamlit/styles/styles.css
+++ b/app/streamlit/styles/styles.css
@@ -31,6 +31,10 @@
     background-color: #4990B1;
 }
 
+.st-emotion-cache-11b9did:hover {
+    color: #4990B1;
+}
+
 .st-emotion-cache-glsyku {
     box-shadow: 5px 5px 5px black;
     background-color: #112d57;
